--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
    <div class="preloader">
-      <img src="images/scanes/lambo.png" alt="SmartMEME" width="512">
+      <img src="android-chrome-192x192.png" alt="SmartMEME" width="512">
    </div>
    <header class="header">
       <div class="container">
