--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    <meta name="twitter:card" content="summary_large_image">
    <meta property="og:site_name" content="SAFEMOON BONK">
    <meta name="twitter:image:alt" content="SAFEMOON BONK">
-   <meta name="twitter:site" content="@MemeButSmartest">
-   <meta name="twitter:creator" content="@MemeButSmartest">
+   <meta name="twitter:site" content="@Safemoonbonk">
+   <meta name="twitter:creator" content="@Safemoonbonk">
    <meta name="twitter:title" content="SAFEMOON BONK">
    <meta name="twitter:description" content="SAFEMOON BONK">
    <meta name="twitter:image" content="favicon-32x32.png">
