--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                </div>
                <div class="social-btns">
                   <a target="_blank"
-                     href="https://pancakeswap.finance/swap?outputCurrency=0x0000000000000000000000000"
+                     href="https://pancakeswap.finance/swap?outputCurrency=0x709C7c137280cd1320f97E80291F139DDcc419FF"
                      class="default-btn">
                      <span>PANCAKESWAP</span>
                   </a>
@@ -78,7 +78,7 @@
                <div class="col">
                   <div class="banner__content text-center" data-aos="fade-up" data-aos-duration="2000">
                      <h1 class="text--3d text-uppercase"> <span class="color--gradient-y">SAFEMOON BONK</h1>
-                     <p>Don't miss the new evolation meme token combined with safemoon and Bonk Token.</p>
+                     <p>Don't miss the new evolution meme token combined with Safemoon and Bonk Token.</p>
                      <div class="editor-field editor-field__textbox">
                         <div class="editor-field__label-container">
                            <label class="editor-field__label">CONTRACT ADDRESS</label>
@@ -86,7 +86,7 @@
 
                         <div class="editor-field__container">
                            <input style="font-size:72%;" type="text" class="editor-field__input"
-                              onblur="removeNoise(this, 'input')" value="0x0000000000000000000000000"
+                              onblur="removeNoise(this, 'input')" value="0x709C7c137280cd1320f97E80291F139DDcc419FF"
                               readonly="readonly" />
                         </div>
                         <span class="editor-field__bottom"></span>
@@ -97,13 +97,13 @@
                         <a type="button" href="#about" class="default-btn">how does it work?</a>
                      </div>
                      <div class="mb-4">
-                        <a type="button" href="https://www.dexview.com/bsc/0x0000000000000000000000000"
+                        <a type="button" href="https://www.dexview.com/bsc/0x709C7c137280cd1320f97E80291F139DDcc419FF"
                            class="default-btn">DexView</a>
                         <a type="button"
-                           href="https://www.dextools.io/app/en/bnb/pair-explorer/0x0000000000000000000000000"
+                           href="https://www.dextools.io/app/en/bnb/pair-explorer/0x709C7c137280cd1320f97E80291F139DDcc419FF"
                            class="default-btn">DexTools</a>
                         <a type="button"
-                           href="https://ave.ai/token/0x0000000000000000000000000-bsc?from=Default"
+                           href="https://ave.ai/token/0x709C7c137280cd1320f97E80291F139DDcc419FF-bsc?from=Default"
                            class="default-btn">AveDex</a>
                      </div>
                      <ul class="social justify-content-center">
@@ -125,14 +125,10 @@
    <section class="marquees-wrapper">
       <div class="marquee marquee-2">
          <ul class="marquee__content scroll">
-            <li><a href="https://bscscan.com/address/0x0000000000000000000000000" class="sponsor-urls"
+            <li><a href="https://bscscan.com/address/0x709C7c137280cd1320f97E80291F139DDcc419FF" class="sponsor-urls"
                   target="_blank"><span><img src="images/logos/binance.png" alt=""></span> Binance chain</a></li>
             <li>&#183;</li>
-            <li><a href="https://www.pinksale.finance/launchpad/0x0000000000000000000000000?chain=BSC"
-                  class="sponsor-urls" target="_blank"><span><img src="images/logos/pinksale.png" alt=""
-                        width="29"></span> PinkSale</a></li>
-            <li>&#183;</li>
-            <li><a href="https://www.dexview.com/bsc/0x0000000000000000000000000" class="sponsor-urls"
+            <li><a href="https://www.dexview.com/bsc/0x709C7c137280cd1320f97E80291F139DDcc419FF" class="sponsor-urls"
                   target="_blank"><span><img src="images/logos/dex-view-logo.png" alt="" width="29"></span> DexView</a>
             </li>
             <li>&#183;</li>
@@ -145,32 +141,32 @@
             <li><a href="https://coinmarketcap.com" class="sponsor-urls" target="_blank"><span><img
                         src="images/logos/coinmarketcap.png" alt="" width="29"></span> coinmarketcap</a></li>
             <li>&#183;</li>
-            <li><a href="https://pancakeswap.finance/swap?inputCurrency=0x0000000000000000000000000&outputCurrency=BNB"
+            <li><a href="https://pancakeswap.finance/swap?inputCurrency=0x709C7c137280cd1320f97E80291F139DDcc419FF&outputCurrency=BNB"
                   class="sponsor-urls" target="_blank"><span><img src="images/logos/pancakeswap.png" alt=""
                         width="29"></span> pancakeswap</a></li>
             <li>&#183;</li>
             <li><a href="https://coingecko.com" class="sponsor-urls" target="_blank"><span><img
                         src="images/logos/CoinGecko_logo.png" alt="" width="29"></span> coingecko</a></li>
             <li>&#183;</li>
-            <li><a href="https://avedex.cc/token/0x0000000000000000000000000-bsc?from=Default"
+            <li><a href="https://avedex.cc/token/0x709C7c137280cd1320f97E80291F139DDcc419FF-bsc?from=Default"
                   class="sponsor-urls" target="_blank"><span><img src="images/logos/avedex.png" alt=""
                         width="29"></span> avedex</a></li>
             <li>&#183;</li>
-            <li><a href="https://www.dextools.io/app/en/bnb/pair-explorer/0x0000000000000000000000000"
+            <li><a href="https://www.dextools.io/app/en/bnb/pair-explorer/0x709C7c137280cd1320f97E80291F139DDcc419FF"
                   class="sponsor-urls" target="_blank"><span><img src="images/logos/dextools.svg" alt=""
                         width="29"></span> dextools</a></li>
             <li>&#183;</li>
          </ul>
          <!-- Mirrors the content above -->
          <ul class="marquee__content scroll" aria-hidden="true">
-            <li><a href="https://bscscan.com/address/0x0000000000000000000000000" class="sponsor-urls"
+            <li><a href="https://bscscan.com/address/0x709C7c137280cd1320f97E80291F139DDcc419FF" class="sponsor-urls"
                   target="_blank"><span><img src="images/logos/binance.png" alt=""></span> Binance chain</a></li>
             <li>&#183;</li>
-            <li><a href="https://www.pinksale.finance/launchpad/0x0000000000000000000000000?chain=BSC"
+            <li><a href="https://www.pinksale.finance/launchpad/0x709C7c137280cd1320f97E80291F139DDcc419FF?chain=BSC"
                   class="sponsor-urls" target="_blank"><span><img src="images/logos/pinksale.png" alt=""
                         width="29"></span> PinkSale</a></li>
             <li>&#183;</li>
-            <li><a href="https://www.dexview.com/bsc/0x0000000000000000000000000" class="sponsor-urls"
+            <li><a href="https://www.dexview.com/bsc/0x709C7c137280cd1320f97E80291F139DDcc419FF" class="sponsor-urls"
                   target="_blank"><span><img src="images/logos/dex-view-logo.png" alt="" width="29"></span> DexView</a>
             </li>
             <li>&#183;</li>
@@ -183,18 +179,18 @@
             <li><a href="https://coinmarketcap.com" class="sponsor-urls" target="_blank"><span><img
                         src="images/logos/coinmarketcap.png" alt="" width="29"></span> coinmarketcap</a></li>
             <li>&#183;</li>
-            <li><a href="https://pancakeswap.finance/swap?inputCurrency=0x0000000000000000000000000&outputCurrency=BNB"
+            <li><a href="https://pancakeswap.finance/swap?inputCurrency=0x709C7c137280cd1320f97E80291F139DDcc419FF&outputCurrency=BNB"
                   class="sponsor-urls" target="_blank"><span><img src="images/logos/pancakeswap.png" alt=""
                         width="29"></span> pancakeswap</a></li>
             <li>&#183;</li>
             <li><a href="https://coingecko.com" class="sponsor-urls" target="_blank"><span><img
                         src="images/logos/CoinGecko_logo.png" alt="" width="29"></span> coingecko</a></li>
             <li>&#183;</li>
-            <li><a href="https://avedex.cc/token/0x0000000000000000000000000-bsc?from=Default"
+            <li><a href="https://avedex.cc/token/0x709C7c137280cd1320f97E80291F139DDcc419FF-bsc?from=Default"
                   class="sponsor-urls" target="_blank"><span><img src="images/logos/avedex.png" alt=""
                         width="29"></span> avedex</a></li>
             <li>&#183;</li>
-            <li><a href="https://www.dextools.io/app/en/bnb/pair-explorer/0x0000000000000000000000000"
+            <li><a href="https://www.dextools.io/app/en/bnb/pair-explorer/0x709C7c137280cd1320f97E80291F139DDcc419FF"
                   class="sponsor-urls" target="_blank"><span><img src="images/logos/dextools.svg" alt=""
                         width="29"></span> dextools</a></li>
             <li>&#183;</li>
